Fix overflow problem

--- a/client/src/pages/home_page/components/IncomeBoard.css
+++ b/client/src/pages/home_page/components/IncomeBoard.css
@@ -1,6 +1,6 @@
 #income-card-container {
   height: 100%;
-  max-height: 410px;
+  max-height: 360px;
   overflow-y: scroll;
 }
 .income-board h4 {
